--- a/style2.css
+++ b/style2.css
@@ -42,7 +42,7 @@ main {
     width: clamp(450px, 300px, 200px);
     padding: 3.5rem 4.5rem;
     background-color: rgba(6, 0, 15, 0.603);
-    height: 85%;
+    height: 70%;
     border-radius: 1%;
     margin-top: 1.5rem;
 }
@@ -64,6 +64,24 @@ form h1 {
     display: flex;
     flex-direction: column;
 }
+#secLogin h5 {
+    font-family: 'Roboto',sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: rgba(106, 102, 116, 0.63);
+    margin-top: 24%;
+}
+h5 a:link {
+    color: rgba(255, 255, 255, 0.932);
+    text-decoration: none;
+}
+h5 a:hover {
+    text-decoration: underline;
+}
+h5 a:visited {
+    color: rgba(255, 255, 255, 0.932);
+    text-decoration: none;
+}
 
 .input-div {
     position: relative;
@@ -71,8 +89,8 @@ form h1 {
 .input-div:first-child {
     margin-top: 1.8rem;
 }
-.input-div:last-child {
-    margin-top: 2.5rem;
+.input-div {
+    margin-top: 1rem;
 }
 
 .inputLogin {
@@ -86,6 +104,7 @@ form h1 {
     color: white;
     font-family: 'Roboto', sans-serif;
     font-size: 17px;
+    font-weight: 300;
     border-radius: 4px;
 }
 .placeholder-input{
@@ -97,6 +116,7 @@ form h1 {
     font-weight: 300;
     font-size: 17px;
     transition: all 100ms ease-in-out ;
+    user-select: none;
 }
 
 .inputLogin:focus {
@@ -105,6 +125,26 @@ form h1 {
 .inputLogin:focus + .placeholder-input {
     top: 8%;
     font-size: 11px;
+}
+.inputLogin:not(:placeholder-shown) + .placeholder-input{
+    top: 8%;
+    font-size: 11px;
+}
+
+.button-div {
+    position: relative;
+    margin-top: 2.5rem;
+}
+.button-div button {
+    width: 100%;
+    height: 3rem;
+    background-color: rgb(216, 12, 12);
+    border: 0;
+    font-family: 'Roboto',sans-serif;
+    font-size: 22px;
+    color: white;
+    font-weight: 500;
+    border-radius: 4px;
 }
 
 footer {
