--- a/css/styleMain.css
+++ b/css/styleMain.css
@@ -8,12 +8,18 @@
 body {
     height: 100vh;
     width: 100%;
-    background: rgb(15,24,103);
-    background: linear-gradient(45deg, rgba(15,24,103,1) 0%, rgba(205,23,23,1) 100%);
+    background: rgb(0, 0, 0);
+    background: linear-gradient(45deg, rgb(49, 0, 0) 0%, rgb(230, 4, 4) 100%);
+    background-image: url("https://assets.nflxext.com/ffe/siteui/vlv3/25badb14-858b-4b1c-8b7d-2244098454d9/61216e4c-b2b3-40e1-85d6-2b13eb86ef2b/BR-pt-20220606-popsignuptwoweeks-perspective_alpha_website_large.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
+    z-index: 1;
 }
-
+.allDiv {
+    width: 100%;
+    height: 100%;
+    background-color: #00000083;
+}
 header {
     width: 100%;
     height: 8%;
@@ -21,12 +27,9 @@ header {
     align-items: center;
 
 }
-header h1 {
+header img {
     position: absolute;
-    font-family: 'Roboto', sans-serif;
-    font-size: 45px;
-    color: rgba(17, 0, 36, 0.658);
-    margin-left: 2rem;
+    margin-left: 3%;
     margin-top: 1rem;
 }
 
@@ -35,16 +38,6 @@ main {
     height: 80%;
     display: flex;
     justify-content: center;
-}
-
-#content {
-    display: flex;
-    width: clamp(450px, 300px, 200px);
-    padding: 3.5rem 4.5rem;
-    background-color: rgba(6, 0, 15, 0.603);
-    height: 70%;
-    border-radius: 1%;
-    margin-top: 1.5rem;
 }
 
 form {
@@ -56,9 +49,7 @@ form h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
     font-size: 37px;
-    
 }
-
 #secLogin {
     height: 70%;
     display: flex;
@@ -68,7 +59,7 @@ form h1 {
     font-family: 'Roboto',sans-serif;
     font-size: 18px;
     font-weight: 500;
-    color: rgba(106, 102, 116, 0.63);
+    color: rgba(116, 116, 116, 0.89);
     margin-top: 24%;
 }
 h5 a:link {
@@ -82,7 +73,6 @@ h5 a:visited {
     color: rgba(255, 255, 255, 0.932);
     text-decoration: none;
 }
-
 .input-div {
     position: relative;
 }
@@ -92,7 +82,6 @@ h5 a:visited {
 .input-div {
     margin-top: 1rem;
 }
-
 .inputLogin {
     height: 3.3rem;
     width: 100%;
@@ -118,7 +107,6 @@ h5 a:visited {
     transition: all 100ms ease-in-out ;
     user-select: none;
 }
-
 .inputLogin:focus {
     background-color: rgba(58, 57, 63, 0.63);
 }
@@ -146,9 +134,34 @@ h5 a:visited {
     font-weight: 500;
     border-radius: 4px;
 }
+.shadowFooter {
+    position: absolute;
+    content: " ";
+    top: 50%;
+    height: 50%;
+    width: 100%;
+    background: linear-gradient(rgba(49, 0, 0, 0.062) 0%, rgba(0, 0, 0, 0.877) 100%);
+    z-index: -1;
+}
+
+.borderFooter {
+    content: " ";
+    height: 1%;
+    width: 100%;
+    background-color: rgb(27, 27, 27);
+}
 
 footer {
     width: 100%;
-    height: 15%;
-    background-color: rgba(6, 0, 15, 0.603);
+    height: 11%;
+    background-color: rgb(0, 0, 0);
+    z-index: 101;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+footer h2 {
+    font-family: 'Roboto',sans-serif;
+    color: rgba(116, 116, 116, 0.89);
+    font-weight: 500;
 }
