--- a/css/styleCadastro.css
+++ b/css/styleCadastro.css
@@ -8,3 +8,32 @@
     margin-top: 2.5rem;
     z-index: 100;
 }
+#secCadastro {
+    height: 70%;
+    display: flex;
+    flex-direction: column;
+}
+#secCadastro h5 {
+    font-family: 'Roboto',sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    color: rgba(116, 116, 116, 0.89);
+    margin-top: 24%;
+}
+
+.progressBarClass {
+    margin-top: 1.7rem;
+    content: " ";
+    height: 8px;
+    width: 100%;
+    background-color: rgba(61, 61, 61, 0.89);
+    border-radius: 4px;
+}
+.progressBar {
+    content: " ";
+    height: 8px;
+    width: 5%;
+    background-color: red;
+    border-radius: 4px;
+    transition: width 200ms ease-in-out;
+}
