--- a/css/styleHome.css
+++ b/css/styleHome.css
@@ -35,6 +35,10 @@ header {
     right: 5%;
     transform: scale(0.8);
 }
+.nav-Div button {
+    border: 0;
+    background-color:rgba(0, 0, 0, 0);
+}
 
 .navImages {
     display: flex;
@@ -55,17 +59,17 @@ header {
     width: 70px;
     height: 70px;
 }
-.hoverImages {
-    position: absolute;
-    width: 100%;
+.hoverImages { 
+    width: 60px;
     height: 100%;
     cursor: pointer;
 }
 .setinha {
     transition: all 230ms ease-in-out;
 }
-.hoverImages:hover + .setinha {
+.setaHovered {
     transform: rotate(-180deg);
+    cursor: pointer;
 }
 
 .dropMenu {
@@ -76,7 +80,14 @@ header {
     flex-direction: column;
     position: absolute;
     background-color: rgba(12, 12, 12, 0.5);
+    opacity: 0;
+    transition: opacity 200ms ease-in-out;
 }
+.menuHovered {
+    opacity: 1;
+    cursor: pointer;
+}
+
 .dropButton {
     width: 100%;
     height: 3rem;
@@ -96,7 +107,6 @@ header {
     text-decoration: none;
     color: white;
 }
-
 main {
     width: 100%;
     height: 100%;
