--- a/css/style404.css
+++ b/css/style404.css
@@ -1,10 +1,14 @@
 #content {
     display: flex;
-    width: clamp(450px, 300px, 200px);
+    width: 70%;
     padding: 3.5rem 4.5rem;
     background-color: rgba(0, 0, 0, 0.753);
-    height: 542px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    height: 80%;
     border-radius: 1%;
     margin-top: 2.5rem;
     z-index: 100;
+    align-items: center;
+    justify-content: center;
 }
