--- a/css/styleAccount.css
+++ b/css/styleAccount.css
@@ -27,9 +27,9 @@ body {
     background-color: rgba(0, 0, 0, 0.753);
     color: white;
     font-family: 'Roboto', sans-serif;
-    height: 90%;
+    height: 95%;
     border-radius: 1%;
-    margin-top: 2.5rem;
+    margin-top: 1rem;
     z-index: 100;
     align-items: center;
     justify-content: center;
@@ -179,9 +179,12 @@ main {
     grid-template-rows: 100%;
 }
 
-.secImg {
-
+.sec01{
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
 }
+
 .secImg img {
     width: 90%;
     border-radius: 4px;
@@ -308,6 +311,41 @@ main {
     background-color: rgba(190, 0, 0, 0.658);
 }
 
+.dropzone {
+    height: 4rem;
+    border: 2px solid rgba(0,0,0,.3);
+    background: rgb(190, 0, 0);
+    padding: 20px 20px;
+    color: white;
+    font-family: 'Roboto',sans-serif;
+    font-weight: 500;
+    font-size: 20px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 4px;
+    border: 0;
+}
+.dz-image img{
+    width: 100%;
+}
+.dz-success-mark {
+    display: none;
+}
+.dz-error-mark {
+    display: none;
+}
+.dz-remove {
+    display: block;
+    background-color: rgb(190, 0, 0);
+    color: white;
+    text-decoration: none;
+    text-align: center;
+    padding: .5rem .5rem;
+    margin-top: .7rem;
+    margin-bottom: .7rem;
+    border-radius: 4px;
+}
+
 .input-div h4 {
     margin-bottom: 1.5rem;
     margin-top: 2rem;
@@ -328,7 +366,7 @@ main {
 }
 .inputLogin {
     height: 3.3rem;
-    width: 90%;
+    width: 100%;
     padding: 1rem 1.5rem 0 1.5rem;
     position: relative;
     background-color: rgba(47, 46, 51, 0.63);
@@ -339,6 +377,9 @@ main {
     font-size: 17px;
     font-weight: 300;
     border-radius: 4px;
+}
+.inptPass {
+    width: 90%;
 }
 .placeholder-input{
     position: absolute;
@@ -366,17 +407,15 @@ main {
     font-size: 11px;
 }
 
-.cadErrMessageDiv {
-    width: 100%;
-    padding: .2rem 0;
-    color: #ffae00;
-    margin-bottom: .8rem;
-    border-bottom: 2px solid #ffae00;
-    border-radius: 1px;
-}
-.cadErrMessageDiv h4 {
+.errMessage {
+    margin-top: .2rem;
+    margin-left: 1.7rem;
     font-family: 'Roboto', sans-serif;
-    font-weight: 400;
+    font-size: 14px;
+    color: #ffae00;
+}
+.errStyle {
+    box-shadow: 0 2px 0 #ffae00;
 }
 
 .custom-select {
