--- a/css/styleAccount.css
+++ b/css/styleAccount.css
@@ -27,7 +27,7 @@ body {
     background-color: rgba(0, 0, 0, 0.753);
     color: white;
     font-family: 'Roboto', sans-serif;
-    height: 95%;
+    height:97%;
     border-radius: 1%;
     margin-top: 1rem;
     z-index: 100;
@@ -161,6 +161,9 @@ main {
     margin-left: 1.5rem;
     width: 90% !important;
 }
+.verifyButton button {
+    width: 90% !important;
+}
 .backLink {
     position: absolute;
     width: 100%;
@@ -171,7 +174,7 @@ main {
 }
 
 
-.formEdit {
+.formEditClass {
     width: 100%;
     height: 100%;
     display: grid;
@@ -296,7 +299,7 @@ main {
     width: 27%;
 }
 .button-div button {
-    width: 100%;
+    width: 90%;
     height: 2.5rem;
     background-color: rgb(190, 0, 0);
     border: 0;
@@ -305,10 +308,42 @@ main {
     color: white;
     font-weight: 500;
     border-radius: 4px;
+    margin-left: 1.5rem;
 }
 .button-div button:hover {
     cursor: pointer;
     background-color: rgba(190, 0, 0, 0.658);
+}
+
+.button-divImg {
+    width: 100%;
+    margin-bottom: 1rem;
+}
+#submitBtnImg:hover {
+    cursor: pointer;
+    background-color: rgba(190, 0, 0, 0.658);
+}
+#submitBtnImg {
+    width: 100%;
+    height: 2.5rem;
+    background-color: rgb(190, 0, 0);
+    border: 0;
+    font-family: 'Roboto',sans-serif;
+    font-size: 20px;
+    color: white;
+    font-weight: 500;
+    border-radius: 4px;
+    display: none;
+}
+.success {
+    box-shadow: 0 2px 0 #1eff00;
+}
+.successMessage {
+    margin-top: .2rem;
+    font-size: 13px;
+    color: #1eff00;
+    font-family: 'Roboto', sans-serif;
+    display: none;
 }
 
 .dropzone {
@@ -334,21 +369,30 @@ main {
 .dz-error-mark {
     display: none;
 }
+.dz-size {
+    display: none;
+}
+.dz-filename {
+    display: none;
+}
 .dz-remove {
     display: block;
     background-color: rgb(190, 0, 0);
     color: white;
     text-decoration: none;
+    font-weight: 500;
+    font-size: 20px;
     text-align: center;
     padding: .5rem .5rem;
     margin-top: .7rem;
-    margin-bottom: .7rem;
+    margin-bottom: 1rem;
     border-radius: 4px;
 }
 
 .input-div h4 {
     margin-bottom: 1.5rem;
-    margin-top: 2rem;
+    font-size: 22px;
+    font-weight: 500;
 }
 .inptDiv2 {
     margin-top: 1rem;
